Development (#10)
* Mod tidy packages

* Migrated to go.uber.org/mock and updated go version to v1.24

* Added air configs and updated git-ignore

* moved docker components to docker directory, ci support, makefile support

* moved docker to docker directory

* Updated golangci linter file to v2

* Some linter fixes

* Upgraded dependencies

* Changed main and cmd structure

* Updated error pkg and fix signup and signIn bug

* Enhancements (#8)

* added exclusion for revive:package-comments
* Updated latest error pkg usages
* updated readme with new databse designs
* updated logging and database singleton usage
* Enhancement: updated database design with better user and token handling
* Enhancement: updated jwt token creation with userID
* moved docker files to project root
* Updated readme
* Updated store layer comments and few test fixes
* updated compose to use redis-8
* updated middleware vars and reponse write function
* updated dockerfiles and env var loading fixes
* updated testing for jwt and store layer
* updated golangci-lint action -> v9

* refactored server creation and updated health endpoint

* fixed docker-compose and updated env vars

* updated api-contract with health endpoint

* updated dockerfile images

* updated docker, configs and server creation pattern

* updated server init commands

* Sonar fixes (#11)

* removed JWT from openapi swagger

* minor conf changes

* Updated golang deps

* Minor fixes and fixed linters

* Removed JWT token from openapi examples

* updated action deps to latest

* updated action dep to their github SHA
