# internal/server/server.go
@@ -2,24 +2,19 @@ package server
 
 import (
 	"context"
-	"log"
 	"log/slog"
+	"net"
 	"net/http"
 	"os"
 	"strconv"
+	"strings"
 	"time"
-
-	"github.com/joho/godotenv"
 )
 
-type Configs struct {
-	Name string `json:"name"`
-	Env  string `json:"env"`
-}
-
 type Health struct {
-	DBStatus string `json:"dbStatus"`
-	Status   string `json:"status"`
+	DBStatus   string `json:"dbStatus"`
+	Status     string `json:"status"`
+	StatusCode int
 }
 
 type Server struct {
@@ -29,108 +24,68 @@ type Server struct {
 	Health      *Health
 	Mux         *http.ServeMux
 	*http.Server
-	*Configs
+}
+
+type Builder struct {
+	server *Server
 }
 
 type Opts func(s *Server)
 
-func NewServer(opts ...Opts) (*Server, error) {
+func NewServerBuilder() *Builder {
 	s := defaultServer()
 
-	s.Logger = newLogger()
+	return s
+}
 
-	db, err := newDB(s.Logger)
+func (sb *Builder) WithLogger() *Builder {
+	sb.server.Logger = newLogger()
+	return sb
+}
+
+func (sb *Builder) WithTimeouts() *Builder {
+	read := getEnvAsInt("READ_TIMEOUT", 10)   // Default to 10 second
+	write := getEnvAsInt("WRITE_TIMEOUT", 20) // Default to 20 second
+	idle := getEnvAsInt("IDLE_TIMEOUT", 30)   // Default to 30 second
+
+	sb.server.ReadTimeout = time.Duration(read) * time.Second
+	sb.server.WriteTimeout = time.Duration(write) * time.Second
+	sb.server.IdleTimeout = time.Duration(idle) * time.Second
+
+	return sb
+}
+
+func (sb *Builder) WithHostPort() *Builder {
+	port := os.Getenv("HTTP_PORT")
+	host := os.Getenv("HTTP_HOST")
+
+	sb.server.Addr = net.JoinHostPort(host, port)
+	return sb
+}
+
+func (sb *Builder) Build() (*Server, error) {
+	db, err := getDatabase(sb.server.Logger)
 	if err != nil {
 		return nil, err
 	}
 
-	s.DB = db
+	sb.server.DB = db
 
-	for _, fn := range opts {
-		fn(s)
-	}
-
-	return s, nil
+	return sb.server, nil
 }
 
-func WithTimeouts(read, write, idle int) Opts {
-	return func(s *Server) {
-		s.ReadTimeout = time.Duration(read) * time.Second
-		s.WriteTimeout = time.Duration(write) * time.Second
-		s.IdleTimeout = time.Duration(idle) * time.Second
-	}
-}
-
-func WithPort(port string) Opts {
-	return func(s *Server) {
-		s.Addr = ":" + port
-	}
-}
-
-func WithAppName(name string) Opts {
-	return func(s *Server) {
-		s.Name = name
-	}
-}
-
-func WithEnv(env string) Opts {
-	return func(s *Server) {
-		s.Env = env
-	}
-}
-
-func ServerFromEnvs() (*Server, error) {
-	if err := godotenv.Load(".env"); err != nil {
-		log.Print("error while loading env file")
-
-		return nil, err
-	}
-
-	opts := loadEnvVars()
-
-	return NewServer(opts...)
-}
-
-func defaultServer() *Server {
-	return &Server{
-		Mux: http.NewServeMux(),
-		Server: &http.Server{
-			Addr:         ":9001",
-			ReadTimeout:  time.Second,
-			WriteTimeout: 10 * time.Second,
-			IdleTimeout:  20 * time.Second,
-		},
-		Configs: &Configs{
-			Name: "todoApp",
-			Env:  "dev",
+func defaultServer() *Builder {
+	return &Builder{
+		server: &Server{
+			Mux: http.NewServeMux(),
+			Server: &http.Server{
+				Addr:         "localhost:9001",
+				ReadTimeout:  time.Second,
+				WriteTimeout: 10 * time.Second,
+				IdleTimeout:  20 * time.Second,
+			},
 		},
 	}
-}
-
-func loadEnvVars() []Opts {
-	var opts []Opts
-
-	appName := os.Getenv("APP_NAME")
-	if appName != "" {
-		opts = append(opts, WithAppName(appName))
-	}
-
-	port := os.Getenv("HTTP_PORT")
-	if port != "" {
-		opts = append(opts, WithPort(port))
-	}
-
-	env := os.Getenv("ENV")
-	if env != "" {
-		opts = append(opts, WithEnv(env))
-	}
-
-	readTimeout := getEnvAsInt("READ_TIMEOUT", 10)   // Default to 10 second
-	writeTimeout := getEnvAsInt("WRITE_TIMEOUT", 20) // Default to 20 second
-	idleTimeout := getEnvAsInt("IDLE_TIMEOUT", 30)   // Default to 30 second
-
-	opts = append(opts, WithTimeouts(readTimeout, writeTimeout, idleTimeout))
-	return opts
 }
 
 func getEnvAsInt(key string, defaultValue int) int {
@@ -144,4 +99,14 @@ func getEnvAsInt(key string, defaultValue int) int {
 	}
 
 	return defaultValue
+}
+
+func getEnvOrDefault(key, defaultVal string) string {
+	val := strings.TrimSpace(os.Getenv(key))
+
+	if val == "" {
+		return defaultVal
+	}
+
+	return val
 }
