# openapi/auth-rest-api.yaml
@@ -8,6 +8,34 @@ servers:
   - url: "http://localhost:9001"
 
 paths:
+  /health:
+    get:
+      tags:
+        - api
+      summary: health status for service
+      responses:
+        200:
+          description: successfully fetch api health
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/healthUp"
+        503:
+          description: application is not down
+          content:
+            application/json:
+              schema:
+                properties:
+                  dbStatus:
+                    type: string
+                    example: "down"
+                  status:
+                    type: string
+                    example: "down"
+                  statusCode:
+                    type: integer
+                    example: 500
+
   /signup:
     post:
       tags:
@@ -31,7 +59,7 @@ paths:
                   code:
                     type: integer
                     example: 404
-                  message: 
+                  message:
                     type: string
                     example: "Unable to signup - invalid password"
         409:
@@ -43,7 +71,7 @@ paths:
                   code:
                     type: integer
                     example: 409
-                  message: 
+                  message:
                     type: string
                     example: "user already exist - sumit@kumar.com"
         500:
@@ -52,7 +80,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 500
                   message:
@@ -83,7 +111,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 404
                   message:
@@ -95,13 +123,13 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 500
                   message:
                     type: string
                     example: "Not able to unmarshall body"
-                  
+
   /refresh:
     post:
       tags:
@@ -115,7 +143,7 @@ paths:
           required: true
           schema:
             type: string
-            example: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiIxNDExNzcyYi1jOTU1LTQ1MzUtOTNlMi1hYmIyNGVkM2I5NjUiLCJpc3MiOiJzdW1pdCBrdW1hciIsInN1YiI6InN1bWl0QGt1bWFyLmNvbSIsImV4cCI6MTczMjY5NTcwNSwibmJmIjoxNzMyNjk0ODA1LCJpYXQiOjE3MzI2OTQ4MDUsImp0aSI6IjEifQ.Jm-_fvwk3tIWZHsm9faOzSDVlRdCOkBTsUCmpZ_HIgE"
+            example: "Bearer <JWT_token>"
       requestBody:
         required: true
         content:
@@ -135,7 +163,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 401
                   message:
@@ -147,7 +175,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 500
                   message:
@@ -160,14 +188,14 @@ paths:
         - User
       summary: enable user to login and generate tokens
       security:
-        - bearerAuth : []
+        - bearerAuth: []
       parameters:
         - in: header
           name: Authorization
           required: true
           schema:
             type: string
-            example: "Bearer eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiIxNDExNzcyYi1jOTU1LTQ1MzUtOTNlMi1hYmIyNGVkM2I5NjUiLCJpc3MiOiJzdW1pdCBrdW1hciIsInN1YiI6InN1bWl0QGt1bWFyLmNvbSIsImV4cCI6MTczMjY5NTcwNSwibmJmIjoxNzMyNjk0ODA1LCJpYXQiOjE3MzI2OTQ4MDUsImp0aSI6IjEifQ.Jm-_fvwk3tIWZHsm9faOzSDVlRdCOkBTsUCmpZ_HIgE"
+            example: "Bearer <JWT_token>"
       responses:
         204:
           description: token revoked successfully
@@ -177,7 +205,7 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 501
                   message:
@@ -189,13 +217,12 @@ paths:
             application/json:
               schema:
                 properties:
-                  code: 
+                  code:
                     type: integer
                     example: 500
                   message:
                     type: string
                     example: "Failed to revoke token"
-                
 
 components:
   schemas:
@@ -222,10 +249,23 @@ components:
           example: "sumit@kumar.com"
         accessToken:
           type: string
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiIxNDExNzcyYi1jOTU1LTQ1MzUtOTNlMi1hYmIyNGVkM2I5NjUiLCJpc3MiOiJzdW1pdCBrdW1hciIsInN1YiI6InN1bWl0QGt1bWFyLmNvbSIsImV4cCI6MTczMjY5NTcwNSwibmJmIjoxNzMyNjk0ODA1LCJpYXQiOjE3MzI2OTQ4MDUsImp0aSI6IjEifQ.Jm-_fvwk3tIWZHsm9faOzSDVlRdCOkBTsUCmpZ_HIgE"
+          example: "<some_JWT_token>"
         refreshToken:
           type: string
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiJkYTBmYmUyYS03NmRkLTQwMjAtYmZjYS1jOThlYzY4NDM2YjMiLCJzdWIiOiJzdW1pdEBrdW1hci5jb20iLCJleHAiOjE3MzI3ODEyMDUsImlhdCI6MTczMjY5NDgwNX0.9es_flCknHGZsyw5NsUajYftrLtwOXT1jO_U7U7RXQQ"
+          example: "<some_JWT_token>"
+
+    healthUp:
+      type: object
+      properties:
+        dbStatus:
+          example: "up"
+          type: string
+        status:
+          type: string
+          example: "up"
+        statusCode:
+          type: integer
+          example: 200
 
     refreshTokenReq:
       type: object
@@ -233,27 +273,19 @@ components:
         refreshToken:
           type: string
           description: "refresh token"
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiJkYTBmYmUyYS03NmRkLTQwMjAtYmZjYS1jOThlYzY4NDM2YjMiLCJzdWIiOiJzdW1pdEBrdW1hci5jb20iLCJleHAiOjE3MzI3ODEyMDUsImlhdCI6MTczMjY5NDgwNX0.9es_flCknHGZsyw5NsUajYftrLtwOXT1jO_U7U7RXQQ"
+          example: "<some_JWT_token>"
 
     refreshTokenResp:
       type: object
       properties:
         accessToken:
           type: string
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiIxNDExNzcyYi1jOTU1LTQ1MzUtOTNlMi1hYmIyNGVkM2I5NjUiLCJpc3MiOiJzdW1pdCBrdW1hciIsInN1YiI6InN1bWl0QGt1bWFyLmNvbSIsImV4cCI6MTczMjY5NTcwNSwibmJmIjoxNzMyNjk0ODA1LCJpYXQiOjE3MzI2OTQ4MDUsImp0aSI6IjEifQ.Jm-_fvwk3tIWZHsm9faOzSDVlRdCOkBTsUCmpZ_HIgE"
+          example: "<some_JWT_token>"
         refreshToken:
           type: string
-          example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJlbWFpbCI6InN1bWl0QGt1bWFyLmNvbSIsImNsYWltSUQiOiJkYTBmYmUyYS03NmRkLTQwMjAtYmZjYS1jOThlYzY4NDM2YjMiLCJzdWIiOiJzdW1pdEBrdW1hci5jb20iLCJleHAiOjE3MzI3ODEyMDUsImlhdCI6MTczMjY5NDgwNX0.9es_flCknHGZsyw5NsUajYftrLtwOXT1jO_U7U7RXQQ"
+          example: "<some_JWT_token>"
 
-    healthResp:
-      type: object
-      properties:
-        service:
-          type: string
-        database:
-          type: string
-
-  securitySchemes: 
+  securitySchemes:
     bearerAuth:
       type: http
       scheme: bearer
